Fixed glyph alignment, edited heroku post

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ border-bottom: 1px dotted #eee;}
   padding: 0 0 5px 0;
   margin: 30px 0 30px 0;}
 .header .nav {
-  margin-top: -60px;
+  margin-top: -55px;
   float: right; }
 .header img {
       width: 20px;
@@ -23,12 +23,9 @@ border-bottom: 1px dotted #eee;}
 .header img:hover {
     opacity: 1; }
 
-.home .nav {
-  display: none; }
-
 ol.index {
   list-style-type: none;
-  margin: 25px 0 70px -10px; }
+  margin: 25px 0 70px -30px; }
 ol.index li {
     line-height: 22px; }
 ol.index .header  {
@@ -56,7 +53,8 @@ ol.index .meta a {
 .glyphicon-forward {
     opacity: 0.3;
     margin: 0 10px 0 -40px;
-    font-size: 10px;}
+    font-size: 12px;
+    }
 
 .spacer100 {
     padding-bottom: 100px;}
